@@ -292,6 +292,7 @@ BA106- GP function cotanh
   108- comparison operators (<,>,<=,>=): support t_QUAD with *same* positive
        discriminant
 BA109- [libpari] Flv_prod, Flv_prod_pre
+BA110- [libpari] Flv_neg, Flv_neg_inplace
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
